# ipc_archive

./: .gitreview  CMakeLists.txt  README.md  README.md.ja  Readme.md  buildtest.sh  cluster_ipc.pc.in
include/: cluster_ipc.h  ipc.h  ipc_protocol.h
ipc/: CMakeLists.txt  ipc.pc.in
ipc/ipc_unit_test/: CMakeLists.txt  ipc_unit_test_client.c  ipc_unit_test_common.c  ipc_unit_test_server.c
ipc/src/: CMakeLists.txt  ipc_client.c  ipc_internal.c  ipc_server.c  ipc_usage_info_table.c
ipc_unit_test/: CMakeLists.txt  ipc_unit_test_client.c  ipc_unit_test_common.c  ipc_unit_test_common.h  ipc_unit_test_server.c
src/: CMakeLists.txt  ipc_client.c  ipc_internal.c  ipc_internal.h  ipc_server.c  ipc_usage_info_table.c
